position: sticky and overflow issue; reworked the app-level layout

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -4,3 +4,21 @@ body {
   margin: 0;
   padding: 0;
 }
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+button {
+  // iOS fix to make buttons extra button-y
+  touch-action: manipulation;
+}
+
+p,
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
